# Triton-Inference-Server-tensorrt

./: README.md  config.yaml  convert.py  graph_dataset.py  train2.py  trans.py  utils.py
clients/c++/: CMakeLists.txt  README.md  Triton.hpp  Yolo.hpp  c_wrapper.cpp  client.cpp  clientclass.cpp  clientclass.h  coin.names  common.hpp  main.cpp
clients/java/c/: c_wrapper.cpp
clients/python/yolov5/: boundingbox.py  client.py  labels.py  processing.py
figconvnet/: convert.py  inference.py  requirments.txt  train.py
figconvnet/configs/: base.yaml
figconvnet/configs/data/: casting.yaml
figconvnet/configs/experiment/casting/: figconv_unet.yaml
figconvnet/configs/experiment/drivaernet/: figconv_unet.yaml
figconvnet/configs/loss/: lploss.yaml
figconvnet/configs/lr_scheduler/: steplr.yaml
figconvnet/configs/model/: figconv_unet_casting.yaml
figconvnet/src/: losses.py
figconvnet/src/data/: __init__.py  base_datamodule.py  dataset.py  drivaernet_datamodule.py
figconvnet/src/models/figconvnet/: base_model.py  figconvunet.py  grid_feature_group.py  neighbor_ops.py  point_feature_conv.py  point_feature_grid_conv.py  point_feature_grid_ops.py
figconvnet/src/networks/: __init__.py  figconvunet_casting.py  figconvunet_drivaer.py
